--- a/src/app/track/track.component.html
+++ b/src/app/track/track.component.html
@@ -6,5 +6,5 @@
   <p>
     <audio controls src="{{ track.preview_url }}"></audio>
   </p>
-  <p><a href (click)="back()">Back</a></p>
+  <p><button href (click)="back()">Back</button></p>
 </div>
