Added production spotify login callback url. Improved styling.
Signed-off-by: Marco Bassaletti <bassaletti@gmail.com>

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,2 +1,2 @@
 <h2>Login with your Spotify Account</h2>
-<button class="btn btn-default" (click)="login()">Login</button>
+<button class="btn btn-primary" (click)="login()">Login</button>
