--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -18,5 +18,5 @@
       </dl>
     </div>
   </div>
-  <button class="btn btn-default btn-primary" href (click)="back()" [style.margin-top.px]="'10'">Back</button>
+  <button class="btn btn-primary" href (click)="back()" [style.margin-top.px]="'10'">Back</button>
 </div>
