--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -15,7 +15,7 @@
       </dl>
     </div>
   </div>
-  <button class="btn btn-default btn-primary" href (click)="back()" [style.margin-top.px]="'10'">Back</button>
+  <button class="btn btn-primary" href (click)="back()" [style.margin-top.px]="'10'">Back</button>
   <div class="row" [style.margin-top.px]="'20'">
     <table class="table table-condensed">
       <thead>
