Support for user logout.
Signed-off-by: Marco Bassaletti <bassaletti@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="page-header">
   <div class="container">
     <h1>Spotify <small>Music Search</small></h1>
+    <button *ngIf="authService.isLoggedIn()" class="btn btn-default btn-xs" (click)="logout()">[Logout]</button>
   </div>
 </div>
 
